# unicorn-hrms

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
database/seeds/: README.md
docs/api/: authentication.md  endpoints.md  webhooks.md
docs/architecture/: system-overview.md
docs/deployment/: configuration.md  installation.md  requirements.md
docs/user-guides/: department-manager.md  employee.md  hr-manager.md
scripts/maintenance/: README.md
src/backend/: UnicornHRMS.slnx
src/backend/API/: Program.cs  UnicornHRMS.API.csproj  UnicornHRMS.API.http  appsettings.json
src/backend/API/Controllers/: AttendancesController.cs  AuthController.cs  BaseApiController.cs  DepartmentsController.cs  EmployeesController.cs  LeaveRequestsController.cs  UsersController.cs
src/backend/API/Converters/: TimeSpanJsonConverter.cs
src/backend/API/Properties/: launchSettings.json
src/backend/Core/: README.md
src/backend/Core/Entities/: Attendance.cs  BaseEntity.cs  Department.cs  Employee.cs  LeaveRequest.cs  Role.cs  User.cs  UserRole.cs
src/backend/Core/Interfaces/: IAttendanceRepository.cs  IDepartmentRepository.cs  IEmployeeRepository.cs  ILeaveRequestRepository.cs  IRepository.cs  IRoleRepository.cs  IUnitOfWork.cs  IUserRepository.cs
src/backend/Data/: ApplicationDbContext.cs  UnicornHRMS.Data.csproj  UnitOfWork.cs
src/backend/Data/Configurations/: AttendanceConfiguration.cs  DepartmentConfiguration.cs  EmployeeConfiguration.cs  LeaveRequestConfiguration.cs  RoleConfiguration.cs  UserConfiguration.cs  UserRoleConfiguration.cs
src/backend/Data/Migrations/: 20260117184524_InitialCreate.Designer.cs  20260117184524_InitialCreate.cs  20260118161609_InitialCreate.Designer.cs  20260118161609_InitialCreate.cs  20260119081016_AddGPSTrackingToAttendance.Designer.cs  20260119081016_AddGPSTrackingToAttendance.cs  ApplicationDbContextModelSnapshot.cs
src/backend/Data/Repositories/: AttendanceRepository.cs  DepartmentRepository.cs  EmployeeRepository.cs  LeaveRequestRepository.cs  Repository.cs  RoleRepository.cs  UserRepository.cs
src/backend/Services/: UnicornHRMS.Services.csproj
src/backend/Services/DTOs/Attendance/: AttendanceDto.cs
src/backend/Services/DTOs/Auth/: AuthDto.cs
src/backend/Services/DTOs/Common/: ResponseDto.cs
src/backend/Services/DTOs/Department/: DepartmentDto.cs
src/backend/Services/DTOs/Employee/: EmployeeDto.cs
src/backend/Services/DTOs/LeaveRequest/: LeaveRequestDto.cs
src/backend/Services/DTOs/OfficeLocation/: OfficeLocationDto.cs
src/backend/Services/DTOs/User/: UserDto.cs
src/backend/Services/Helpers/: PasswordHelper.cs
src/backend/Services/Implementation/: AttendanceService.cs  AuthService.cs  DepartmentService.cs  EmployeeService.cs  LeaveRequestService.cs  LocationService.cs  TokenService.cs  UserService.cs
src/backend/Services/Interfaces/: IAttendanceService.cs  IAuthService.cs  IDepartmentService.cs  IEmployeeService.cs  ILeaveRequestService.cs  ILocationService.cs  ITokenService.cs  IUserService.cs
src/backend/Services/Mappings/: MappingProfile.cs
src/backend/Tests/: UnicornHRMS.Tests.csproj
src/desktop/: setup-project.bat
src/desktop/unicorn-desktop/: .gitignore  CMakeLists.txt  README.md
src/desktop/unicorn-desktop/assets/shaders/opengl/: basic.frag  basic.vert
src/desktop/unicorn-desktop/scripts/: build.bat  clean.bat  run.bat
src/desktop/unicorn-desktop/src/: app.rc  application.cpp  main.cpp
src/desktop/unicorn-desktop/src/audio/: sound_manager.cpp  sound_manager.h
src/desktop/unicorn-desktop/src/background/: background_manager.cpp  background_manager.h
src/desktop/unicorn-desktop/src/core/: application.cpp  application.h  entry_point.cpp  entry_point.h  input.cpp  input.h  window.cpp  window.h
src/desktop/unicorn-desktop/src/crypto/: crypto_manager.cpp  crypto_manager.h
src/desktop/unicorn-desktop/src/database/: connection.cpp  connection.h
src/desktop/unicorn-desktop/src/renderer/: renderer.cpp  renderer.h  shader.h
src/desktop/unicorn-desktop/src/renderer/opengl/: gl_buffer.cpp  gl_context.cpp  gl_context.h  gl_shader.cpp  gl_shader.h
src/desktop/unicorn-desktop/src/ui/: draw_command.h  font_manager.cpp  font_manager.h  icon_manager.cpp  icon_manager.h  text_shaper.cpp  text_shaper.h  ui_animation.cpp  ui_animation.h  ui_context.cpp  ui_context.h  ui_renderer.cpp  ui_renderer.h  ui_tools_panel.h
src/desktop/unicorn-desktop/src/ui/helpers/: colors.h
src/desktop/unicorn-desktop/src/utils/: logger.cpp  logger.h
src/desktop/unicorn-desktop/src/video/: video_player.cpp  video_player.h
